<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <yc.com.homework.base.widget.CommonToolBar
        android:id="@+id/commonToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f0f6fa"
        android:orientation="vertical"
        android:paddingTop="@dimen/t10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/t50dp"
                android:gravity="center"
                android:paddingLeft="@dimen/t15dp"
                android:paddingRight="@dimen/t15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/t10dp"
                    android:layout_marginRight="@dimen/t10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_phone_number"
                    android:inputType="phone|number"
                    android:maxLength="11"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_get_code"
                    android:layout_width="90dp"
                    android:layout_height="@dimen/t30dp"
                    android:background="@drawable/recharge_pay_bg"
                    android:gravity="center"
                    android:text="@string/get_verify_code"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t1dp"
                android:background="@color/gray_f0f6fa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/t50dp"
                android:gravity="center"
                android:paddingLeft="@dimen/t15dp"
                android:paddingRight="@dimen/t15dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_code"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/t10dp"
                    android:layout_marginRight="@dimen/t10dp"
                    android:background="@null"
                    android:hint="@string/input_verify_code"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/t10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/t50dp"
                android:gravity="center"

                android:paddingLeft="@dimen/t15dp"
                android:paddingRight="@dimen/t15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_pwd"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_new_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/t10dp"
                    android:layout_marginRight="@dimen/t10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_sex_number"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t14sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/t1dp"
                android:background="@color/gray_f0f6fa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/t50dp"
                android:gravity="center"
                android:paddingLeft="@dimen/t15dp"
                android:paddingRight="@dimen/t15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_pwd"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_repeat_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/t10dp"
                    android:layout_marginRight="@dimen/t10dp"
                    android:background="@null"
                    android:hint="@string/input_sex_number"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t14sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/t48dp"
            android:layout_margin="@dimen/t15dp"
            android:background="@drawable/blue_corners_bg"
            android:clickable="true"
            android:elevation="@dimen/t3dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/t16sp" />
    </LinearLayout>
</LinearLayout>